// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Validator Global default settings Snapshot 1`] = `
Object {
  "options": Object {
    "concurrent": true,
    "mirror": "https://dl.nwjs.io/",
    "output": "./dist",
    "verbose": true,
  },
  "taskDefaults": Object {
    "arch": "x86",
    "excludes": Array [
      "node_modules",
    ],
    "files": Array [
      "**/*",
    ],
    "icon": undefined,
    "junk": Array [],
    "manifestOverrides": Object {},
    "nwFlavor": "normal",
    "nwVersion": "match",
    "outputPattern": "{{name}}-{{version}}-{{platform}}-{{arch}}",
    "outputType": "zip",
    "platform": "win",
    "strippedManifestProperties": Array [],
    "unIcon": undefined,
  },
  "tasks": Array [],
}
`;

exports[`Validator buildSettingsObject Bad settings are ignored 1`] = `
Object {
  "options": Object {
    "concurrent": true,
    "mirror": "https://dl.nwjs.io/",
    "output": "./dist",
    "verbose": false,
  },
  "taskDefaults": Object {
    "arch": "x86",
    "excludes": Array [
      "node_modules",
    ],
    "files": Array [
      "**/*",
    ],
    "icon": undefined,
    "junk": Array [],
    "manifestOverrides": Object {},
    "nwFlavor": "normal",
    "nwVersion": "match",
    "outputPattern": "{{name}}-{{version}}-{{platform}}-{{arch}}",
    "outputType": "zip",
    "platform": "win",
    "strippedManifestProperties": Array [],
    "unIcon": undefined,
  },
  "tasks": Array [
    Object {
      "arch": "x86",
      "excludes": Array [
        "node_modules",
      ],
      "files": Array [
        "**/*",
      ],
      "icon": undefined,
      "junk": Array [],
      "manifestOverrides": Object {},
      "nwFlavor": "normal",
      "nwVersion": "match",
      "outputPattern": "{{name}}-{{version}}-{{platform}}-{{arch}}",
      "outputType": "zip",
      "platform": "win",
      "strippedManifestProperties": Array [],
      "unIcon": undefined,
    },
  ],
}
`;

exports[`Validator validTaskSettings Snapshot 1`] = `
Array [
  "nwVersion",
  "nwFlavor",
  "platform",
  "arch",
  "files",
  "excludes",
  "outputType",
  "outputPattern",
  "manifestOverrides",
  "strippedManifestProperties",
  "junk",
  "icon",
  "unIcon",
]
`;

exports[`Validator validationMap Snapshot 1`] = `
Object {
  "arch": "Arch",
  "concurrent": "Boolean",
  "excludes": "ArrayOfStrings",
  "files": "ArrayOfStrings",
  "icon": "String",
  "junk": "ArrayOfStrings",
  "manifestOverrides": "Object",
  "mirror": "Mirror",
  "nwFlavor": "NwFlavor",
  "nwVersion": "NwVersion",
  "output": "String",
  "outputPattern": "String",
  "outputType": "OutputType",
  "platform": "Platform",
  "strippedManifestProperties": "ArrayOfStrings",
  "unIcon": "String",
  "verbose": "Boolean",
}
`;
